[package]
name = "grazier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
notify = { version = "6.1.1", features = ["serde"] }
notify-debouncer-full = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
