[package]
name = "grazier"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.6", features = ["derive"] }
glob = "0.3.1"
notify = { version = "6.1.1", features = ["serde"] }
notify-debouncer-full = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
serde_yml = "0.0.10"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
wax = "0.6.0"
